# indtree

./: .gitignore  README.md  setup.cfg
datasets/bank/: X_test.csv  X_train.csv  X_val.csv  bank.csv  y_test.csv  y_train.csv  y_val.csv
datasets/bank/preprocessed/: X_test.csv  X_val.csv  y_test.csv  y_train.csv  y_val.csv
datasets/breast/: X_test.csv  X_train.csv  X_val.csv  breast.csv  y_test.csv  y_train.csv  y_val.csv
datasets/breast/preprocessed/: X_test.csv  X_train.csv  X_val.csv  y_test.csv  y_train.csv  y_val.csv
datasets/car/: X_test.csv  X_train.csv  X_val.csv  car.csv  y_test.csv  y_train.csv  y_val.csv
datasets/car/preprocessed/: X_test.csv  X_train.csv  X_val.csv  y_test.csv  y_train.csv  y_val.csv
datasets/glass/: X_test.csv  X_train.csv  X_val.csv  glass.csv  y_test.csv  y_train.csv  y_val.csv
datasets/glass/preprocessed/: X_test.csv  X_train.csv  X_val.csv  y_test.csv  y_train.csv  y_val.csv
datasets/iris/: X_test.csv  X_train.csv  X_val.csv  iris.csv  y_test.csv  y_train.csv  y_val.csv
datasets/iris/preprocessed/: X_test.csv  X_train.csv  X_val.csv  y_test.csv  y_train.csv  y_val.csv
datasets/pima/: X_test.csv  X_train.csv  X_val.csv  pima.csv  y_test.csv  y_train.csv  y_val.csv
datasets/pima/preprocessed/: X_test.csv  (+5 more)
datasets/wine/: X_test.csv  X_train.csv  X_val.csv  winequality.csv  y_test.csv  y_train.csv  y_val.csv
indtree/: gentree_tree_encoder.py  gentree_utils.py  metamodel.py  siren_jax.py  siren_models.py  siren_multioutput.py  torch_dataset.py  tree_dataset_generation.py
notebooks/: metalearning_example.ipynb
(+6 files in other folders)
