[metadata]
name = indtree

[options]
packages = find:

install_requires =
    scikit-learn
    torch
    torchaudio
    torchvision
    lightning
    learn2learn
    tqdm
    wandb
    flax

python_requires = >= 3.9


[options.extras_require]
extras =
    matplotlib
    notebook
    h5py
    imageio
    json5
    pandas
    tqdm

